--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,3 +1,3 @@
-body {
-    max-width: 720px;
-}
+/*write customs styling here
+if you want to serve other static content too,
+best to create separate css, img, fonts etc folders*/
